Add glBindBufferRange workaround for Qualcomm Adreno GPUs

This workaround rounds down the size passed to glBindBufferRange.
The Adreno driver wrongly produces GL_INVALID_VALUE if the size is
not a multiple of 4.

Bug: 906743
Change-Id: I270a3c6e4b0fa9de8b76e02b4fc6e522653acf06
Reviewed-on: https://chromium-review.googlesource.com/c/1437948
Commit-Queue: Austin Eng <enga@chromium.org>
Reviewed-by: James Darpinian <jdarpinian@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#631564}
Former-commit-id: 399cccdc8ccf78b0110f9fc001bcd9a3dd9dd1b3